# PAL-Payload-Visualization-GSOC-25

./: README.md
Install_ROS_2/: humble_installation.md
Pinocchio_Rigid_Body_Dyn_with_Tiago_Robot/: pinocchio_tiago_robot_setup.md
Pinocchio_Rigid_Body_Dyn_with_Tiago_Robot/tiago_pinoc/: CMakeLists.txt  package.xml
Pinocchio_Rigid_Body_Dyn_with_Tiago_Robot/tiago_pinoc/scripts/: my_pinoccohio_node.py
Pinocchio_Rigid_Body_Dyn_with_Tiago_Robot/tiago_pinoc/src/: my_cpp_node.cpp
Tiago_Robot_Setup/: tiago_robot_setup.md
